[metadata]
name = oscript
description = Modules for implementing Subaru Telescope Observation Script
long_description = file: README.txt
long_description_content_type = text/plain
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.txt
url = https://github.com/naojsoft/oscript
edit_on_github = False
github_project = naojsoft/oscript
keywords = subaru, telescope, parsing, observation, script, tools
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    ply>=3.11
setup_requires =
    setuptools_scm
include_package_data = False
scripts =
    scripts/check_ope
    scripts/sk_lexer
    scripts/sk_parser
    scripts/sk_decode
    scripts/para_lexer
    scripts/para_parser
    scripts/para_validator
    scripts/testfunc_sk_parser

